--- a/templates/base.html
+++ b/templates/base.html
@@ -15,15 +15,16 @@
     <div class="page">
         <h1 class="main-title">adham.forum</h1>
     <div class="nav-bar">
-      <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#skills">Skills</a></li>
+    <ul> 
+          <li><a href="home">Home</a></li>
+          <li><a href="skills">Skills</a></li>
           <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">Projects</a></li>
+            <a href="javascript:void(0)" class="dropbtn">Projects</a>
               <div class="dropdown-content">
-              <a href="#">Personal project</a>
-              <a href="#">Final Year Project</a>
-          <li><a href="#contact">Contact</a></li>
+              <a href="personal">Personal project</a>
+              <a href="fyp">Final Year Project</a>
+          </li>
+          <li><a href="contact">Contact</a></li>
     </div>
     {% block content %}
     {% endblock %} 
