--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
 
 {% block content %}
     <div class="main-body">
-        <p>Graduated from National Institure of Technology Akita, Japan, I have broad knowlegde on everything in Electronic and Communications engineering. My major is in Information Technology and my strongest skills are in managing Linux servers, web hosting and web development.</p>
+        <p class="block-text">
+            Graduated from National Institure of Technology Akita, Japan, I have broad knowlegde on everything in Electronic and Communications engineering. My major is in Information Technology and my strongest skills are in managing Linux servers, web hosting and web development.
+        </p>
     </div>
+        <p class="block-text">
+            This is my portfolio 
+        </p>
 {% endblock %} 
