--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,6 @@ body {
 }
 
 .page{
-  
   display: flex;
   flex-direction: column;
 }
@@ -22,10 +21,11 @@ h1.main-title {
 
 ul {
   list-style-type: none;
-  margin: 0;
+  margin: 0.75rem;
   padding: 0;
   overflow: hidden;
   background-color: #444444;
+  border-radius: 0.5rem;
 }
   
 li {
@@ -42,8 +42,12 @@ li a, .dropbtn {
   
 li a:hover, .dropdown:hover .dropbtn {
   background-color: rgb(136, 48, 48);
+  color: rgb(255, 255, 255);
 }
-  
+li a.active { 
+  background-color: rgb(136, 48, 48);
+  color: white;
+}
 li.dropdown {
   display: inline-block;
 }
@@ -65,7 +69,10 @@ li.dropdown {
   text-align: left;
 }
   
-.dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown-content a:hover {
+  background-color: #b1b1b1;
+  color:black;
+}
   
 .dropdown:hover .dropdown-content {
   display: block;
@@ -73,8 +80,34 @@ li.dropdown {
 
 .main-body{
   color: #444444;
+  display: flex;
+  flex-direction: row;
 }
 
-.main-body p{
-  color: white;
+.block-text{
+  color: rgb(0, 0, 0);
+  font-size: 1rem;
+  background-color: #6e6e6e;
+  padding: 0.75rem;
+  margin: 0.75rem;
+  border-radius: 0.5rem;
+}
+
+.contact-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-text{
+  font-size: 0.5rem;
+  position: fixed;
+  bottom: 0;
+  left:0;
+  width: 100%;
+  height: 2.5%;
+  background-color: #444444;
+  padding:10px;
+  text-align: center;
 }
